* Thu Sep 22 2011 Thunor <thunorsif@hotmail.com>
- Added command line option --space-expand to set the widget packing
  expand state at the project level.
- Added command line option --space-fill to set the widget packing
  fill state at the project level.
- Added the "space-expand" custom tag attribute for the h/vbox widgets
  to set the widget packing expand state at the container level.
- Added the "space-fill" custom tag attribute for the h/vbox widgets
  to set the widget packing fill state at the container level.
- Added the "space-expand" custom tag attribute for all other widgets
  to set the widget packing expand state at the widget level.
- Added the "space-fill" custom tag attribute for all other widgets
  to set the widget packing fill state at the widget level.
- By default the original quirky widget packing method is used.
  Project level --space-expand/fill override the original method.
  Container level "space-expand/fill" override the project level method
  and the original method.
  Widget level "space-expand/fill" override the container level method,
  the project level method and the original method.

* Wed Sep 21 2011 Thunor <thunorsif@hotmail.com>
- Fixed the longstanding issue with expand and fill being FALSE when
  packing widgets into boxes. A message said that the original author
  couldn't get it to work, but I can't see anything wrong with it.

* Tue Sep 20 2011 Thunor <thunorsif@hotmail.com>
- New widget: <colorbutton>.
- Added examples/colorbutton/colorbutton_advanced.

* Sat Sep 17 2011 Thunor <thunorsif@hotmail.com>
- Added widget_text.c/h and added clear, fileselect and envvar support.
- Added examples/text/text_advanced and updated the other examples.

* Thu Sep 15 2011 Thunor <thunorsif@hotmail.com>
- Tidied-up all of the tree widget examples.

* Wed Sep 14 2011 Thunor <thunorsif@hotmail.com>
- Added examples/tree/tree_item_advanced.
- Added examples/tree/tree_input_advanced.
- Added examples/tree/tree_input_file_advanced.
